Fix text size on mobile

--- a/main.css
+++ b/main.css
@@ -170,6 +170,10 @@ footer p {
         font-size: 15px;
     }
 
+    main section li {
+        font-size: 15px;
+    }
+
     footer {
         margin-top: 50px;
     }
